--- a/admin-dev/themes/default/sass/partials/_date-range-picker.sass
+++ b/admin-dev/themes/default/sass/partials/_date-range-picker.sass
@@ -16,9 +16,9 @@ $color-calendar-range-compare: lighten($color-calendar-compare,10%)
 #datepicker
 	.input-selected
 		margin: 0
-	#date-start.input-selected, #date-end.input-selected,
+	#date-start.input-selected, #date-end.input-selected
 		border: solid 3px $color-calendar-day-selected
-	#date-start-compare.input-selected, #date-end-compare.input-selected,
+	#date-start-compare.input-selected, #date-end-compare.input-selected
 		border: solid 3px $color-calendar-day-selected-compare
 	div#datepicker-form
 		#date-range
@@ -197,7 +197,7 @@ $color-calendar-range-compare: lighten($color-calendar-compare,10%)
 				height: 3em
 				line-height: 3em
 				font-weight: 400
-				float: left
+				@include float(left)
 				text-transform: uppercase
 				cursor: pointer
 				&:hover
