--- a/admin-dev/themes/default/sass/partials/_footer.sass
+++ b/admin-dev/themes/default/sass/partials/_footer.sass
@@ -18,11 +18,11 @@
 		height: 30px
 		width: 30px
 		position: fixed
-		right: 10px
+		@include right(10px)
 		bottom: 10px
 		z-index: 9003
-		padding: 0px 6px
-		margin: -2px 0px 0px
+		padding: 0 6px
+		margin: -2px 0 0
 		text-align: center
 		line-height: 30px
 		text-decoration: none
@@ -42,12 +42,14 @@
 			font-size: $icon-size-base
 			color: white
 	.footer-contact
-		padding: 7px 0 0 0
+		padding: 7px 0 0
 		line-height: 35px
 		white-space: nowrap
 		overflow: hidden
 		text-overflow: ellipsis
-		@include margin(0,0,6px,6px)
+		@include margin(0, 0, 6px, 6px)
+		.footer_link
+			display: inline-block
 		strong
 			font-weight: 400
 			color: white
