--- a/admin-dev/themes/default/sass/controllers/_carrier-wizard.sass
+++ b/admin-dev/themes/default/sass/controllers/_carrier-wizard.sass
@@ -23,7 +23,7 @@
 	ul.anchor
 		position: relative
 		display: block
-		float: left
+		@include float(left)
 		list-style: none
 		padding: 0
 		margin: 0 0 10px 0
@@ -32,11 +32,11 @@
 		&.nbr_steps_4
 			li
 				width: 25%
-				float: left
+				@include float(left)
 		&.nbr_steps_5
 			li
 				width: 25%
-				float: left
+				@include float(left)
 	li
 		position: relative
 		display: block
@@ -51,10 +51,10 @@
 			outline-style: none
 			.stepNumber
 				position: relative
-				float: left
+				@include float(left)
 				width: 24px
 				height: 32px
-				margin-right: 3px
+				@include margin-right(3px)
 				text-align: center
 				padding: 0 5px
 				font-size: 30px
@@ -62,7 +62,7 @@
 				color: white
 			.stepDesc
 				position: relative
-				text-align: left
+				@include text-align(left)
 				font-size: 13px
 				height: 32px
 				display: table-cell
@@ -70,53 +70,53 @@
 				line-height: 13px
 			.chevron
 				border: 16px solid transparent
-				border-left: 14px solid white
-				border-right: 0
+				@include border-left(14px solid white)
+				@include border-right(0)
 				position: absolute
-				right: -16px
+				@include right(-16px)
 				top: 0
 				&:after
 					border: 16px solid transparent
-					border-left: 14px solid #ccc
-					border-right: 0
+					@include border-left(14px solid #ccc)
+					@include border-right(0)
 					position: absolute
 					content: ""
-					right: 2px
+					@include right(2px)
 					top: -16px
 		a.disabled
 			color: #777
 			background-color: #ccc
 			.chevron:after
-				border-left: 14px solid #ccc
+				@include border-left(14px solid #ccc)
 		a.selected
 			color: #F8F8F8
 			cursor: text
 			background-color: $main-color
 			.chevron:after
-				border-left: 14px solid $main-color
+				@include border-left(14px solid $main-color)
 		a.done
 			color: white
 			background-color: $brand-success
 			.chevron:after
-				border-left: 14px solid $brand-success
+				@include border-left(14px solid $brand-success)
 	.loader
 		display: none
 
 	.msgBox
 		position: relative
 		display: none
-		float: left
-		margin: 4px 0 0 5px
+		@include float(left)
+		@include margin(4px, 0, 0, 5px)
 		padding: 5px
 		border: 1px solid #FFD700
 		background-color: #FFFFDD
 		color: #5A5655
 		+border-radius(5px)
 	.msgBox .content
-		padding: 0px
-		float: left
+		padding: 0
+		@include float(left)
 	#carrier_logo_block
-		right: 10px
+		@include right(10px)
 	.wizard_error
 		@extend .alert
 		@extend .alert-danger
@@ -124,7 +124,7 @@
 		background-color: #ccc
 	.range_type
 		width: 220px
-		text-align: right
+		@include text-align(right)
 		font-weight: bold
 	.range_data
 		width: 110px
@@ -141,5 +141,5 @@
 	.actionBar
 		height: 30px
 	.actionBar a
-		float: right
-		margin-right: 10px
+		@include float(right)
+		@include margin-right(10px)
