--- a/admin-dev/themes/default/sass/partials/_header.sass
+++ b/admin-dev/themes/default/sass/partials/_header.sass
@@ -24,12 +24,12 @@ $header-height: 36px
 	height: 36px
 	background: url('#{$img-path}/prestashop-avatar-header_shopname.png') no-repeat top left
 	background-size: auto 36px
-	padding-left: 205px !important
+	width: 205px
 	@include margin(0, 5px, 0, 0)
 	#shop_version
 		font-size: 10px
 	@media (max-width: $screen-sm)
-		margin-left: 25px
+		@include margin-left(25px)
 #header_shopname
 	@extend .navbar-brand
 	text-decoration: none
@@ -122,7 +122,7 @@ $header-height: 36px
 		color: $contrasted-light-default
 		cursor: default
 		display: inline-block
-		margin-left: -13px
+		@include margin-left(-13px)
 		.label-tooltip
 			padding: 9px 0
 			color: $brand-warning
@@ -130,12 +130,12 @@ $header-height: 36px
 		color: $contrasted-light-default
 		cursor: default
 		display: inline-block
-		margin-left: -13px
+		@include margin-left(-13px)
 		.label-tooltip
 			padding: 9px 0
 			color: $brand-warning
 	.maintenance-mode + .debug-mode
-		margin-left: 0
+		@include margin-left(0)
 #employee_infos
 	width: $header-height
 	box-sizing: border-box
@@ -153,13 +153,12 @@ $header-height: 36px
 		border: none
 		padding: 0
 #employee_links
+	@include right(0)
+	@include left(auto)
 	i
 		font-size: $icon-size-base
 	@media (max-width: $screen-sm)
-		@include ltr
-			left: 0 !important
-		@include rtl
-			right: 0 !important
+		@include left(0 !important)
 		li
 			color: white
 			font-size: 1.2em
@@ -171,21 +170,21 @@ $header-height: 36px
 		color: darken(white,40%)
 		text-align: center
 		font-size: 0.9em
-		padding: 0 0 3px 0
+		padding: 0 0 3px
 		sup
 			font-size: 0.7em
 
 .bo_search_form
-	float: left
+	@include float (left)
 	width: 250px
-	margin: 4px 0 0 0
+	margin: 4px 0 0
 	@extend .hidden-xs
 	#bo_query
 		@include border-radius(0, 55px, 55px, 0)
 		color:       $main-color
 		background:  white
 		border:      1px solid $bg-content-color
-		border-left: none
+		@include border-left(0)
 		@include box-shadow(none)
 		@include transition(none)
 	.input-group
@@ -193,7 +192,7 @@ $header-height: 36px
 	.input-group-btn
 		@include border-radius(55px, 0, 0, 55px)
 		border:       1px solid $bg-content-color
-		border-right: none
+		@include border-right(0)
 		.btn
 			@include border-radius(55px, 0, 0, 55px)
 			@include box-shadow(none)
@@ -229,9 +228,9 @@ $header-height: 36px
 	@extend .nav
 	@extend .navbar-nav
 	@include ltr
-		@extend .navbar-left
-	@include rtl
 		@extend .navbar-right
+	@include rtl
+		@extend .navbar-left
 	@extend .hidden-sm
 	height:     $header-height
 	box-sizing: border-box
@@ -283,7 +282,7 @@ $header-height: 36px
 		vertical-align: middle
 		position: absolute
 		top: .125rem
-		right: .125rem
+		@include right(.125rem)
 		color: #fff
 		background: #fb0
 		font-size: .5625rem
@@ -295,11 +294,13 @@ $header-height: 36px
 		border-radius: 0
 		min-width: 25rem
 		box-shadow: none
+		@include right(0)
+		@include left(auto)
 		.notifications
 			.nav-tabs
 				border-bottom: 1px solid #fff
 				.nav-item
-					margin-left: 0
+					@include margin-left(0)
 					width: 33%
 					text-align: center
 					margin-bottom: -1px
